[tool.mypy]
ignore_missing_imports = 'True'

[tool.poetry]
name = "bear-robotics"
version = "0.0.1"
description = "bear-robotics"
authors = ["MigoLee"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
faker = "^15.3.4"
pytest-cov = "*"
pytest-env = "*"
debugpy = "*"
coverage = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
